--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,14 @@
     #notification {
       position: fixed;
       bottom: 50%;
-      left: 35%;
-      width: 400px;
-      padding: 20px;
+      left: 32%;
+      font-size: 18px;
+      width: 500px;
+      padding: 30px 40px;
       color: #4e73df;
       border-radius: 5px;
       background-color: white;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
     }
 
     .hidden {
@@ -41,10 +42,10 @@
   <div id="root"></div>
   <div id="notification" class="hidden">
     <p id="message"></p>
-    <button id="close-button" onClick="closeNotification()">
+    <button class="btn btn-primary" id="close-button" onClick="closeNotification()">
       Затвори
     </button>
-    <button id="restart-button" onClick="restartApp()" class="hidden">
+    <button class="btn btn-success" id="restart-button" onClick="restartApp()" class="hidden">
       Рестартирай
     </button>
   </div>
