--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <button class="btn btn-primary" id="close-button" onClick="closeNotification()">
       Затвори
     </button>
-    <button class="btn btn-success" id="restart-button" onClick="restartApp()" class="hidden">
+    <button class="btn btn-success hidden" id="restart-button" onClick="restartApp()">
       Рестартирай
     </button>
   </div>
